@@ -1,6 +1,10 @@
+2023-02-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Use Unicode symbol for minus in scientific e notation
+
 2023-01-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
-	* Add option, in preferences, to change symbols used for output of digit 10 and 11 in duodecimal numbers (new default is A and B)
+	* Add option, in preferences, to change symbols used for output of digits 10 and 11 in duodecimal numbers (new default is A and B)
 
 2023-01-10 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
